Initial draft of Mind the Gap paper

--- a/book.toml
+++ b/book.toml
@@ -2,4 +2,4 @@
 authors = ["Sarthak Munshi", "Sachit Malik", "Nishit Mengar"]
 language = "en"
 src = "src"
-title = "AI Security Handbook"
+title = "AI Security Handbook: Develop Secure AI Systems"
